--- a/app/src/main/res/menu/products_menu_drawer.xml
+++ b/app/src/main/res/menu/products_menu_drawer.xml
@@ -3,43 +3,39 @@
 
     <group android:checkableBehavior="single">
         <item android:id="@+id/computers"
-            android:icon="@drawable/ic_baseline_add_box"
+            android:icon="@drawable/ic_baseline_computer_24"
             android:title="Computers"/>
 
         <item android:id="@+id/smart_phones"
-            android:icon="@drawable/ic_baseline_add_box"
+            android:icon="@drawable/ic_baseline_phone_android_24"
             android:title="Smart Phones"/>
 
         <item android:id="@+id/gaming_consoles"
-            android:icon="@drawable/ic_baseline_add_box"
+            android:icon="@drawable/ic_baseline_videogame_asset_24"
             android:title="Gaming Consoles"/>
 
         <item android:id="@+id/home_appliances"
-            android:icon="@drawable/ic_baseline_add_box"
+            android:icon="@drawable/ic_baseline_home_work_24"
             android:title="Home Appliances"/>
 
         <item android:id="@+id/home_theaters"
-            android:icon="@drawable/ic_baseline_add_box"
+            android:icon="@drawable/ic_baseline_radio_24"
             android:title="Home Theaters"/>
     </group>
 
     <item android:title="Actions">
         <menu>
             <item android:id="@+id/about"
-                android:title="About"
-                android:icon="@drawable/ic_login"/>
+                android:title="About"/>
 
             <item android:id="@+id/share"
-                android:title="Share"
-                android:icon="@drawable/ic_login"/>
+                android:title="Share"/>
 
             <item android:id="@+id/settings"
-                android:title="Settings"
-                android:icon="@drawable/ic_login"/>
+                android:title="Settings"/>
 
             <item android:id="@+id/logout"
-                android:title="Logout"
-                android:icon="@drawable/ic_login"/>
+                android:title="Logout"/>
 
         </menu>
     </item>
