--- a/app/src/main/res/layout/activity_seller_products.xml
+++ b/app/src/main/res/layout/activity_seller_products.xml
@@ -17,6 +17,34 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
+    <ImageView
+        android:id="@+id/empty_list"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/ic_baseline_backup_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/seller_products"
+        app:layout_constraintVertical_bias="0.355"
+        android:visibility="gone"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:text="No Items On Your List Yet.\n Add Products You Want to Sell"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/empty_list"
+        app:layout_constraintVertical_bias="0.096"
+        android:visibility="gone"/>
+
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/extended_floating_button"
         android:layout_width="wrap_content"
@@ -49,7 +77,8 @@
         android:layout_marginBottom="40dp"
         android:text="Add Computer"
         app:layout_constraintBottom_toTopOf="@+id/extended_floating_button"
-        app:layout_constraintEnd_toStartOf="@+id/fab_add_comp" />
+        app:layout_constraintEnd_toStartOf="@+id/fab_add_comp"
+        android:textColor="@color/black"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_phone"
@@ -68,6 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
+        android:textColor="@color/black"
         android:layout_marginBottom="116dp"
         android:text="Add Phone"
         app:layout_constraintBottom_toTopOf="@+id/extended_floating_button"
