--- a/app/src/main/res/layout/product_layout.xml
+++ b/app/src/main/res/layout/product_layout.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
     android:layout_height="150dp"
-    android:layout_margin="3dp">
+    android:layout_margin="3dp"
+    android:padding="1dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,23 +17,14 @@
             android:id="@+id/product_image"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/product_discount"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="4dp"
-            android:background="@color/purple"
-            android:elevation="2dp"
-            android:text="15%"
-            android:textColor="@color/white" />
-
-        <TextView
             android:id="@+id/product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/product_image"
             android:layout_marginTop="5dp"
-            android:text="Product Name" />
+            android:text="Product Name"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,14 +36,9 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/product_price"
                 android:layout_weight="1"
-                android:text="KES"/>
+                android:text="KES"
+                android:textColor="@color/black"/>
 
-            <TextView
-                android:id="@+id/product_discounted_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="KES"/>
         </LinearLayout>
     </RelativeLayout>
 
