--- a/app/src/main/res/layout/fragment_comp.xml
+++ b/app/src/main/res/layout/fragment_comp.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.Laptop"
-    android:padding="5dp">
+    tools:context=".fragments.CompFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/welcome_txt"
+        android:text="Welcome to Computers"/>
 
 
 </RelativeLayout>
