--- a/app/src/main/res/layout/fragment_edit_phone.xml
+++ b/app/src/main/res/layout/fragment_edit_phone.xml
@@ -12,7 +12,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/frag_phone_img_edit"
